--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "sweetalert2": "^11.3.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
