--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "chakra-ui": "^0.3.9",
     "googleapis": "^92.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
